Change history
~~~~~~~~~~~~~~

3.5.3 (unreleased)
------------------


3.5.2 (2010-10-01)
------------------

- Handle unicode usernames and passwords, encoding them to UTF-8. Fix for
  https://bugs.launchpad.net/zope.sendmail/+bug/597143

3.5.1 (2009-01-26)
------------------

- Copied over the UtilityTerm and UtilityVocabulary implementation from
  zope.app.component to avoid a dependency.

- Work around a problem when smtp quit fails, the mail was considered not
  delivered where just the quit failed.

3.5.0 (2008-07-05)
------------------

- final release (identical with 3.5.0b2)

3.5.0b2 (2007-12-19)
--------------------

- If the SMTP server rejects a message (for example, when the sender or
  recipient address is malformed), that email stays in the queue forever
  (https://bugs.launchpad.net/zope3/+bug/157104).


3.5.0b1 (2007-11-08)
--------------------

- Added README.txt
- Can now talk to servers that don't implement EHLO
- Fix bug that caused files with very long names to be created
- Fix for https://bugs.launchpad.net/zope3/+bug/157104: move aside mail that's
  causing 5xx server responses.


3.5.0a2 (2007-10-23)
--------------------

- Cleaned up ``does_esmtp`` in faux SMTP connection classes provided by the
  tests.
- If the ``QueueProcessorThread`` is asked to stop while sending messages, do
  so after sending the current message; previously if there were many, many
  messages to send, the thread could stick around for quite a while.


3.5.0a1 (2007-10-23)
--------------------

- ``QueueProcessorThread`` now accepts an optional parameter *interval* for
  defining how often to process the mail queue (default is 3 seconds)

- Several ``QueueProcessorThreads`` (either in the same process, or multiple
  processes) can now deliver messages from a single maildir without duplicates
  being sent.


3.4.0 (2007-08-20)
--------------------

- Bugfix: Don't keep open files around for every email message